scripted build commit

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "private": true,
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "remove-dist":"IF EXIST \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\" RMDIR /s /q \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\"",
+    "build-and-copy":"cd ../harjoitukset && yarn run build && xcopy \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset\\dist\" \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\" /f /s /e /k /i",
+    "build:ui": "yarn remove-dist && yarn build-and-copy",
+    "deploy:full":"yarn build:ui && git add . && git commit -m \"scripted build commit\" && git push"
   },
   "dependencies": {
     "cors": "^2.8.5",
