--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "cmd-remove-dist":"IF EXIST \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\" RMDIR /s /q \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\"",
-    "cmd-build-and-copy":"cd ../harjoitukset && yarn run build && xcopy \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset\\dist\" \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\" /f /s /e /k /i",
+    "cmd-remove-dist": "IF EXIST \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\" RMDIR /s /q \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\"",
+    "cmd-build-and-copy": "cd ../harjoitukset && yarn run build && xcopy \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset\\dist\" \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\" /f /s /e /k /i",
     "build:ui": "yarn cmd-remove-dist && yarn cmd-build-and-copy",
-    "scripted-commit-push":"git add . && git commit -m \"scripted build commit\" && git push",
-    "deploy:full":"yarn build:ui && yarn scripted-commit-push"
+    "scripted-commit-push": "git add . && git commit -m \"scripted build commit\" && git push",
+    "deploy:full": "yarn build:ui && yarn scripted-commit-push"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
