linting challenges - addon vs script discrepancies

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cmd-build-and-copy": "cd ../harjoitukset && yarn run build && xcopy \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset\\dist\" \"C:\\Users\\nurmituo\\työ\\Oma kehittyminen\\fullstackopen\\harjoitukset-node-backend\\dist\" /f /s /e /k /i",
     "build:ui": "yarn cmd-remove-dist && yarn cmd-build-and-copy",
     "scripted-commit-push": "git add . && git commit -m \"scripted build commit\" && git push",
-    "deploy:full": "yarn build:ui && yarn scripted-commit-push"
+    "deploy:full": "yarn build:ui && yarn scripted-commit-push",
+    "lint": "eslint ."
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -23,6 +24,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^1.6.3",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0"
   }
 }
