modified prettier rules

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "deploy:full": "yarn build:ui && yarn scripted-commit-push",
     "lint": "eslint .",
     "lint:fix": "yarn lint -- --fix",
+    "prettier2": "npx prettier --write",
     "prettier": "npx prettier --check",
-    "prettier:fix": "yarn prettier -- --write",
+    "prettier:fix": "yarn prettier -- --write .",
+    "format2": "yarn prettier2 && yarn lint:fix",
     "format": "yarn prettier:fix && yarn lint:fix"
   },
   "dependencies": {
